@@ -5,6 +5,7 @@
 #include "middlewares/authorization.hpp"
 #include "middlewares/dataintegrity.hpp"
 #include "middlewares/elapsedtime.hpp"
+#include "middlewares/ratelimit.hpp"
 #include "middlewares/search.hpp"
 #include "middlewares/xrequest.hpp"
 #include <crow.h>
@@ -13,7 +14,7 @@
 class API_V1_Routes {
 
 public:
-    API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, XRequest, Search, DataIntegrity>> app, std::shared_ptr<UserController> userController, std::shared_ptr<PatientController> patientController);
+    API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, RateLimit, ElapsedTime, Authentication, Authorization, XRequest, Search, DataIntegrity>> app, std::shared_ptr<UserController> userController, std::shared_ptr<PatientController> patientController);
 
 private:
 };
