@@ -16,13 +16,15 @@ Server::Server(uint16_t srv_threads, uint16_t db_connections)
     , sqlman(std::make_shared<SqlMan>())
     , patientController(std::make_shared<PatientController>(dbController, restHelper, sqlman))
     , userController(std::make_shared<UserController>(dbController, restHelper, tokenizer))
+    , dos_detector(std::make_shared<DOSDetector>(120, std::chrono::seconds(60)))
+    , rateLimit(std::make_shared<RateLimit>(dos_detector))
     , elapsedTime(std::make_shared<ElapsedTime>())
     , authentication(std::make_shared<Authentication>())
     , authorization(std::make_shared<Authorization>(tokenizer))
     , dataIntegrity(std::make_shared<DataIntegrity>())
     , search(std::make_shared<Search>())
     , xrequest(std::make_shared<XRequest>())
-    , app(std::make_shared<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, XRequest, Search, DataIntegrity>>(*elapsedTime, *authentication, *authorization, *xrequest, *search, *dataIntegrity))
+    , app(std::make_shared<crow::App<crow::CORSHandler, RateLimit, ElapsedTime, Authentication, Authorization, XRequest, Search, DataIntegrity>>(*rateLimit, *elapsedTime, *authentication, *authorization, *xrequest, *search, *dataIntegrity))
     , routes(std::make_shared<API_V1_Routes>(app, userController, patientController))
     , srv_threads(srv_threads)
     , db_connections(db_connections)
